Implements v7.1.0 of the nodejs server and reactjs client
